@@ -1,3 +1,7 @@
+2000-07-02  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Starting support for projectile weapons.
+
 2000-06-30  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Death of Avatar works fairly well now.
